		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Link
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Metadata
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Path
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Pie
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Polygon
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Polyline
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#RadialGradient
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Rectangle
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Rotate
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Scale
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Script
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#SkewX
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#SkewY
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#TargetArea
		+	06/07/2017 class added