@@ -102,6 +102,7 @@ Version 0.1 Initial release
 		+	06/07/2017 class added
 		%	06/09/2017 __init__() changed for proper inheritance
 		%	06/21/2017 fixed issue in super().__init__()
+		+	07/26/2017 added ability to set properties for version info of application
 	#Path
 		+	06/07/2017 class added
 		%	06/09/2017 __init__() changed for proper inheritance
